ELLE-294 | refactor & remove unused code